--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -19,7 +19,7 @@ MaterialQualityLevel=1
 
 [/Script/UnrealEd.LevelEditorPlaySettings]
 NewWindowPosition=(X=160,Y=90)
-LastExecutedPlayModeType=PlayMode_Simulate
+LastExecutedPlayModeType=PlayMode_InVR
 GameGetsMouseControl=False
 MouseControlLabelPosition=LabelAnchorMode_TopLeft
 ViewportGetsHMDControl=False
@@ -75,8 +75,8 @@ CurrentScalingGridSize=6
 RotGridEnabled=False
 
 [MRU]
-MRUItem0=/Game/_Scenes/Maze
-MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/Maze
 MRUItem2=/Game/_Scenes/KnifeThrow
 MRUItem3=/Game/_Scenes/IntroScene
 MRUItem4=/Game/_Scenes/HeartBall
@@ -91,7 +91,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Menu
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -117,7 +117,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1802,6 +1802,16 @@ BP_ToothV1_C.Rendering=True
 BP_ToothV1_C.Replication=True
 BP_ToothV1_C.Input=True
 BP_ToothV1_C.Actor=True
+BP_OtherToothV2_C.Tick=True
+BP_OtherToothV2_C.Rendering=True
+BP_OtherToothV2_C.Replication=True
+BP_OtherToothV2_C.Input=True
+BP_OtherToothV2_C.Actor=True
+BP_WisdomToothV1_C.Tick=True
+BP_WisdomToothV1_C.Rendering=True
+BP_WisdomToothV1_C.Replication=True
+BP_WisdomToothV1_C.Input=True
+BP_WisdomToothV1_C.Actor=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1822,7 +1832,7 @@ SceneComponent=
 ActorComponent=
 KillZVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PhysicsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" "
+StaticMesh="\"Object.StaticMesh.BodySetup.Object.AggGeom\" \"Object.StaticMesh.BodySetup.Object.AggGeom.ConvexElems.ConvexElems[0]\" "
 BP_Heart_C=
 StaticMeshActor=
 REINST_BP_Heart_C_514="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
@@ -1863,7 +1873,7 @@ RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMat
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMaterials/FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat.FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
@@ -1888,7 +1898,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/_WillTextures all Maps/PerfectSand02/PerfectSand02_AmbientOcclusionMap.png
+GenericImport=C:/Users/Matt/Desktop/Tooth_V2_Other_Text.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2699,6 +2709,9 @@ bConvertSceneUnit=False
 /Game/Materials/Menu/ClockTrunk/WoodenGrain1.WoodenGrain1=0
 /Game/Materials/Menu/Teeth/PerfectSand02.PerfectSand02=0
 /Game/Materials/Menu/Teeth/Flat_PerfectSand02_Mat.Flat_PerfectSand02_Mat=0
+/Game/FBX_Models/Menu/OtherToothV2/Tooth_V2_Other_Text.Tooth_V2_Other_Text=0
+/Game/Blueprints/Menu/BP_OtherToothV2.BP_OtherToothV2=0
+/Game/Blueprints/Menu/BP_WisdomToothV1.BP_WisdomToothV1=0
 
 [MaterialEditor]
 PrimType=1
