--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Menu
+ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/Maze/PadLockV1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -1873,7 +1873,7 @@ RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMat
 RecentlyPlaced=/Game/FBX_Models/KnifeThrow/FemaleTarget_FullBody/FemaleTargetMaterials/FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat.FemaleTarget_FullBodyV1_Packed0_Diffuse_Mat;
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=0.000
@@ -1898,7 +1898,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/Tooth_V2_Other_Text.fbx
+GenericImport=C:/Users/Matt/Desktop/PadLockV1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
