--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,8 +75,8 @@ CurrentScalingGridSize=6
 CurrentPosGridSize=4
 
 [MRU]
-MRUItem0=/Game/_Scenes/IntroScene
-MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/IntroScene
 MRUItem2=/Game/_Scenes/Maze
 MRUItem3=/Game/_Scenes/KnifeThrow
 MRUItem4=/Game/_Scenes/HeartBall
@@ -91,7 +91,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Materials/IntroScene/3DTent
+ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/IntroScene/Pillar
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -117,7 +117,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/IntroScene
+LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1913,7 +1913,7 @@ RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/L_Shape/RustedPipeLV2Text_Cyli
 RecentlyPlaced=/Game/FBX_Models/_GeneralUse/Pipes/L_Shape/RustedPipeLV2Text_Cylinder_002.RustedPipeLV2Text_Cylinder_002;
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=1.000 Y=2.000
@@ -1938,7 +1938,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/3DTentWall/3DTentWall.PNG
+GenericImport=C:/Users/Matt/Desktop/IntroTicketPillarsText.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
