--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -75,8 +75,8 @@ CurrentScalingGridSize=6
 CurrentRotGridSize=0
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/Maze
+MRUItem0=/Game/_Scenes/Maze
+MRUItem1=/Game/_Scenes/VR_Menu
 MRUItem2=/Game/_Scenes/IntroScene
 MRUItem3=/Game/_Scenes/KnifeThrow
 MRUItem4=/Game/_Scenes/HeartBall
@@ -91,7 +91,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/FBX_Models/Maze/SawBlade
+ContentBrowserTab1.SelectedPaths=/Game/Materials/_GeneralUse/SpiderWeb_1
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -117,10 +117,11 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/Maze
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Materials/_GeneralUse/SpiderWeb_1/Spiderweb_1_Mat.Spiderweb_1_Mat
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1997,7 +1998,7 @@ ParticleModuleLifetimeBase="\"Object.Lifetime.Lifetime\" \"Object.Lifetime.Lifet
 ParticleModule="\"Object.Light.ColorScaleOverLife.Distribution\" \"Object.Light.BrightnessOverLife\" \"Object.Light.BrightnessOverLife.Distribution\" \"Object.Light.RadiusScale\" \"Object.Light.RadiusScale.Distribution\" \"Object.Light.LightExponent.Distribution\" "
 MaterialExpressionConstant3Vector="\"Object.Constant\" "
 LightmassImportanceVolume=
-PaperSpriteActor="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+PaperSpriteActor=
 LightmassPrimitiveSettingsObject="\"Object.LightmassSettings\" "
 VR_Menu_C=
 LevelScriptActor=
@@ -2011,6 +2012,8 @@ BP_ScareObjectSprite1Obje_C="\"Object.Sprite.RenderComponent.Object.Collision.Bo
 REINST_BP_ScareObjectSprite1Obje_C_532="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Materials/_GeneralUse/SpiderWeb_1/Spiderweb_1_Mat.Spiderweb_1_Mat;
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_StaticMesh.Cage_StaticMesh;
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_006.CageTexV1_Torus_006;
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_005.CageTexV1_Torus_005;
@@ -2029,14 +2032,12 @@ RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_059.Cag
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_058.CageTexV1_Cylinder_058;
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_057.CageTexV1_Cylinder_057;
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_056.CageTexV1_Cylinder_056;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_055.CageTexV1_Cylinder_055;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_054.CageTexV1_Cylinder_054;
 
 [MessageLog]
 LastLogListing=FBXImport
 
 [RootWindow]
-ScreenPosition=X=1.000 Y=2.000
+ScreenPosition=X=3.000 Y=0.000
 WindowSize=X=1577.000 Y=867.000
 InitiallyMaximized=False
 
@@ -2058,7 +2059,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=F:/_CIU/_FinalProjectWork/_Original Assets/_Assets FBX reworked with textures/_WillsModels/Saw-Blade/Saw-bladeTex.fbx
+GenericImport=C:/Users/Matt/Desktop/spider-web-12.jpg
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
