--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -92,7 +92,7 @@ OnlyBuildVisibility=False
 UseErrorColoring=True
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Materials/_GeneralUse/SpiderWeb_1
+ContentBrowserTab1.SelectedPaths=/Game
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
@@ -122,8 +122,6 @@ LastLevel=/Game/_Scenes/Maze
 
 [AssetEditorManager]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/Materials/_GeneralUse/SpiderWeb_2/Spiderweb_2_Mat.Spiderweb_2_Mat
-OpenAssetsAtExit=/Game/Materials/_GeneralUse/SpiderWeb_1/Spiderweb_1_Mat.Spiderweb_1_Mat
 
 [PluginBrowser]
 InstalledPlugins=Substance
@@ -1973,7 +1971,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object=
+Object="\"Object.LightmassSettings\" "
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
@@ -2014,6 +2012,13 @@ BP_ScareObjectSprite1Obje_C="\"Object.Sprite.RenderComponent.Object.Collision.Bo
 REINST_BP_ScareObjectSprite1Obje_C_532="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/MediumTunnel_2/MediumTunnel_2_StaticMesh.MediumTunnel_2_StaticMesh;
+RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/MediumTunnel_1/MediumTunnel_1_StaticMesh.MediumTunnel_1_StaticMesh;
+RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/ShortTunnel_2/ShortTunnel_2_StaticMesh.ShortTunnel_2_StaticMesh;
+RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
+RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/ShortTunnel_1/ShortTunnel_1_StaticMesh.ShortTunnel_1_StaticMesh;
+RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/ShortTunnel/ShortTunnel_StaticMesh.ShortTunnel_StaticMesh;
+RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/LongTunnel/LongTunnel_StaticMesh.LongTunnel_StaticMesh;
 RecentlyPlaced=/Game/Materials/_GeneralUse/SpiderWeb_1/Spiderweb_1_Mat.Spiderweb_1_Mat;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_StaticMesh.Cage_StaticMesh;
@@ -2027,13 +2032,6 @@ RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus.CageTexV1_
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_065.CageTexV1_Cylinder_065;
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_064.CageTexV1_Cylinder_064;
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_063.CageTexV1_Cylinder_063;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_062.CageTexV1_Cylinder_062;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_061.CageTexV1_Cylinder_061;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_060.CageTexV1_Cylinder_060;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_059.CageTexV1_Cylinder_059;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_058.CageTexV1_Cylinder_058;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_057.CageTexV1_Cylinder_057;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_056.CageTexV1_Cylinder_056;
 
 [MessageLog]
 LastLogListing=FBXImport
