--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -76,8 +76,8 @@ CurrentRotGridSize=0
 GridEnabled=False
 
 [MRU]
-MRUItem0=/Game/_Scenes/Maze
-MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/Maze
 MRUItem2=/Game/_Scenes/IntroScene
 MRUItem3=/Game/_Scenes/KnifeThrow
 MRUItem4=/Game/_Scenes/HeartBall
@@ -118,7 +118,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1963,6 +1963,8 @@ REINST_BP_ScareObjectSprite1Obje_C_532.Cooking=True
 REINST_BP_ScareObjectSprite1Obje_C_532.Replication=True
 REINST_BP_ScareObjectSprite1Obje_C_532.Input=True
 REINST_BP_ScareObjectSprite1Obje_C_532.Actor=True
+Maze_C.Default=True
+Maze_C.Rendering=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2059,7 +2061,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/spinnenweb.jpg
+GenericImport=C:/Users/Matt/Desktop/CE_1_ButtonClick_Adam.wav
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2895,6 +2897,8 @@ bConvertSceneUnit=False
 /Game/Sprites_Decals/Maze/Jumpscare_Objects/BP_ScareObjectSprite1Obje.BP_ScareObjectSprite1Obje=1
 /Game/Materials/_GeneralUse/SpiderWeb_1/Spiderweb_1_Mat.Spiderweb_1_Mat=0
 /Game/Materials/_GeneralUse/SpiderWeb_2/Spiderweb_2_Mat.Spiderweb_2_Mat=0
+/Game/Blueprints/_GeneralUse/Buttons/BP_Button_Parent.BP_Button_Parent=0
+/Game/Blueprints/_GeneralUse/Buttons/Maze.Maze=0
 
 [MaterialEditor]
 PrimType=1
