--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,10 +74,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=6
 CurrentRotGridSize=0
 GridEnabled=False
+CameraSpeed=2
 
 [MRU]
-MRUItem0=/Game/_Scenes/VR_Menu
-MRUItem1=/Game/_Scenes/Maze
+MRUItem0=/Game/_Scenes/Maze
+MRUItem1=/Game/_Scenes/VR_Menu
 MRUItem2=/Game/_Scenes/IntroScene
 MRUItem3=/Game/_Scenes/KnifeThrow
 MRUItem4=/Game/_Scenes/HeartBall
@@ -118,7 +119,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/VR_Menu
+LastLevel=/Game/_Scenes/Maze
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1965,6 +1966,17 @@ REINST_BP_ScareObjectSprite1Obje_C_532.Input=True
 REINST_BP_ScareObjectSprite1Obje_C_532.Actor=True
 Maze_C.Default=True
 Maze_C.Rendering=True
+ParticleSystemComponent.TransformCommon=True
+ParticleSystemComponent.Particles=True
+ParticleSystemComponent.EmitterActions=True
+ParticleSystemComponent.Materials=True
+ParticleSystemComponent.Attachment=True
+ParticleSystemComponent.Lighting=True
+ParticleSystemComponent.Rendering=True
+ParticleSystemComponent.LOD=True
+ParticleSystemComponent.Tags=True
+ParticleSystemComponent.Activation=True
+ParticleSystemComponent.Cooking=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1973,7 +1985,7 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PostProcessVolume="\"Object.PostProcessVolumeSettings.Settings.ColorSaturationShadows\" \"Object.PostProcessVolumeSettings.Settings.FilmWhitePoint\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EndUserSettings="\"Object.Privacy.bSendAnonymousUsageDataToEpic\" "
-Object="\"Object.LightmassSettings\" "
+Object=
 MaterialExpressionSceneColor="\"Object.ConstInput\" "
 MaterialExpression=
 WorldSettings="\"Object.Lightmass.LightmassSettings\" "
@@ -2014,6 +2026,7 @@ BP_ScareObjectSprite1Obje_C="\"Object.Sprite.RenderComponent.Object.Collision.Bo
 REINST_BP_ScareObjectSprite1Obje_C_532="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/Sprites_Decals/IntroScene/CarnEvil_Banner_Original/LOGO_BLACK_Sprite.LOGO_BLACK_Sprite;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/MediumTunnel_2/MediumTunnel_2_StaticMesh.MediumTunnel_2_StaticMesh;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/MediumTunnel_1/MediumTunnel_1_StaticMesh.MediumTunnel_1_StaticMesh;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/ShortTunnel_2/ShortTunnel_2_StaticMesh.ShortTunnel_2_StaticMesh;
@@ -2033,7 +2046,6 @@ RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_001.CageTe
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus.CageTexV1_Torus;
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_065.CageTexV1_Cylinder_065;
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_064.CageTexV1_Cylinder_064;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_063.CageTexV1_Cylinder_063;
 
 [MessageLog]
 LastLogListing=FBXImport
