--- a/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/CIU_CarnEvil_Final/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,10 +74,11 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 CurrentScalingGridSize=6
 CurrentRotGridSize=0
 CurrentPosGridSize=0
+CameraSpeed=2
 
 [MRU]
-MRUItem0=/Game/_Scenes/Maze
-MRUItem1=/Game/_Scenes/VR_Menu
+MRUItem0=/Game/_Scenes/VR_Menu
+MRUItem1=/Game/_Scenes/Maze
 MRUItem2=/Game/_Scenes/IntroScene
 MRUItem3=/Game/_Scenes/KnifeThrow
 MRUItem4=/Game/_Scenes/HeartBall
@@ -118,7 +119,7 @@ GlobalAssetPicker.ThumbnailSizeScale=0.100000
 GlobalAssetPicker.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/_Scenes/Maze
+LastLevel=/Game/_Scenes/VR_Menu
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -1976,6 +1977,8 @@ ParticleSystemComponent.LOD=True
 ParticleSystemComponent.Tags=True
 ParticleSystemComponent.Activation=True
 ParticleSystemComponent.Cooking=True
+MaterialExpressionConstant4Vector.MaterialExpressionConstant4Vector=True
+MaterialExpressionConstant4Vector.MaterialExpression=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2023,8 +2026,10 @@ BP_RandomSpawnVolume_C=
 BP_Ride_RandomSpawnerVolume_C="\"Object.Default.ActorList\" "
 BP_ScareObjectSprite1Obje_C="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
 REINST_BP_ScareObjectSprite1Obje_C_532="\"Object.Sprite.RenderComponent.Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[1]\" "
+MaterialExpressionConstant4Vector="\"Object.Constant\" "
 
 [PlacementMode]
+RecentlyPlaced=/Game/FBX_Models/Maze/WhiskeyBottle/WhiskeybottleV1.WhiskeybottleV1;
 RecentlyPlaced=/Game/Sprites_Decals/Maze/RailTracks/RailTrack_Straight_Sprite.RailTrack_Straight_Sprite;
 RecentlyPlaced=/Game/Sprites_Decals/IntroScene/CarnEvil_Banner_Original/LOGO_BLACK_Sprite.LOGO_BLACK_Sprite;
 RecentlyPlaced=/Game/FBX_Models/Maze/Tunnel/MediumTunnel_2/MediumTunnel_2_StaticMesh.MediumTunnel_2_StaticMesh;
@@ -2044,10 +2049,9 @@ RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_003.CageTe
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_002.CageTexV1_Torus_002;
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus_001.CageTexV1_Torus_001;
 RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Torus.CageTexV1_Torus;
-RecentlyPlaced=/Game/FBX_Models/Maze/Cage/Cage_Pieces/CageTexV1_Cylinder_065.CageTexV1_Cylinder_065;
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=3.000 Y=0.000
@@ -2072,7 +2076,7 @@ UNR=C:/Users/Matt/Desktop/CIU_Final_CarnEvil_4.19.2/CIU_CarnEvil_Final/Content/_
 BRUSH=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBX=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 FBXAnim=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
-GenericImport=C:/Users/Matt/Desktop/IMG_1392.PNG
+GenericImport=C:/Users/Matt/Desktop/WhiskeybottleV1.fbx
 GenericExport=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericOpen=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
 GenericSave=C:/Users/Matt/Desktop/CIU_CarnEvil_Final/Content/
@@ -2699,8 +2703,6 @@ LodDistance4=0.000000
 LodDistance5=0.000000
 LodDistance6=0.000000
 LodDistance7=0.000000
-bImportMaterials=False
-bImportTextures=False
 
 [DetailCustomWidgetExpansion]
 PostProcessVolume=PostProcessVolume.Lens.Lens,
@@ -2911,6 +2913,7 @@ bConvertSceneUnit=False
 /Game/Blueprints/_GeneralUse/Buttons/BP_Button_Parent.BP_Button_Parent=0
 /Game/Blueprints/_GeneralUse/Buttons/Maze.Maze=0
 /Game/Sprites_Decals/Maze/RailTracks/RailTrack_Straight_Sprite.RailTrack_Straight_Sprite=0
+/Game/FBX_Models/Maze/WhiskeyBottle/Flat_BrownGlass_Mat.Flat_BrownGlass_Mat=0
 
 [MaterialEditor]
 PrimType=1
